--- a/augminted-contract/package.json
+++ b/augminted-contract/package.json
@@ -5,16 +5,17 @@
   "license": "MIT",
   "scripts": {
     "contract": "truffle create contract",
-    "build": "truffle compile && yarn move-abis && yarn typings",
-    "move-abis": "rm -rf ../augminted-ui/src/contract-abi && cp -rv ./build/contracts/ ../augminted-ui/src/contract-abi/",
-    "typings": "typechain --target=web3-v1 --out-dir=../augminted-ui/src/contract-abi --glob=./build/contracts/*.json",
+    "compile": "truffle compile",
+    "typescript": "yarn compile && yarn task:move-abis && yarn task:generate-ts",
+    "task:move-abis": "rm -rf ../augminted-ui/src/contract-abi && cp -rv ./build/contracts/ ../augminted-ui/src/contract-abi/",
+    "task:generate-ts": "typechain --target=web3-v1 --out-dir=../augminted-ui/src/contract-abi --glob=./build/contracts/*.json",
     "deploy": "truffle migrate",
-    "deploy:rinkeby": "truffle migrate --network rinkeby",
-    "x": "truffle help"
+    "deploy:rinkeby": "truffle migrate --network rinkeby"
   },
   "dependencies": {},
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.4.3",
+    "@typechain/web3-v1": "^3.0.0",
     "dotenv": "^10.0.0",
     "truffle": "^5.4.2",
     "typechain": "^5.1.2"
