--- a/augminted-ui/package.json
+++ b/augminted-ui/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "animate.css": "^4.1.1",
+    "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +25,7 @@
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "web3": "^1.5.1"
+    "web3": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
